--- a/services/templates/services/failed.html
+++ b/services/templates/services/failed.html
@@ -1,3 +1,3 @@
-<h2>Purchase Successful!</h2>
-<p>You successfully purchased {{ quantity }} x {{ service.name }}.</p>
+<h2>Purchase Failed</h2>
+<p>{{ error }}</p>
 <a href="/">Back to Home</a>
